# AirSim

./: build.cmd  build_ue.sh
AirLib/include/api/: RpcLibClientBase.hpp  VehicleApiBase.hpp
AirLib/include/common/: AirSimSettings.hpp
AirLib/include/vehicles/car/api/: CarApiBase.hpp  CarRpcLibAdapators.hpp  CarRpcLibClient.hpp
AirLib/src/api/: RpcLibClientBase.cpp  RpcLibServerBase.cpp
AirLib/src/vehicles/car/api/: CarRpcLibClient.cpp  CarRpcLibServer.cpp
PythonClient/: AirSimClient.py
Unreal/Environments/Blocks/: Blocks.code-workspace  Blocks.uproject  build.sh
Unreal/Environments/Blocks/AirSim/Source/SimMode/: SimModeBase.cpp
Unreal/Plugins/AirSim/: AirSim.uplugin
Unreal/Plugins/AirSim/Content/Blueprints/: BP_CustomCarPawn.uasset  BP_FlyingPawn.uasset
Unreal/Plugins/AirSim/Content/Models/CustomCar/: Cube.uasset  Cube_001.uasset  FbxScene_body.uasset  Material.uasset  Material1.uasset  Material2.uasset  Material_001.uasset  Material_002.uasset  Material_003.uasset  back01Mesh.uasset  back03Mesh.uasset  back04Mesh.uasset  back_bumpeMesh.uasset  back_det27Mesh.uasset  back_gla37Mesh.uasset  back_glassMesh.uasset  back_li154Mesh.uasset  back_lightMesh.uasset  back_redglMesh.uasset  back_wind8Mesh.uasset  back_windoMesh.uasset  black.uasset  black_002_003.uasset  black_002_004.uasset  body.uasset  box_back01Mesh.uasset  box_side_bMesh.uasset  brakedisk_002_003.uasset  brakedisk_002_004.uasset  carpaint.uasset  carpaint_002_003.uasset  carpaint_002_004.uasset  chrome.uasset  chrome_002_003.uasset  chrome_002_004.uasset  cleargl149Mesh.uasset  cleargl158Mesh.uasset  cleargl168Mesh.uasset  clearglass.uasset  darkglass.uasset  (+96 more)
Unreal/Plugins/AirSim/Source/: AirSim.Build.cs  CameraDirector.cpp  CameraDirector.h  PIPCamera.cpp  VehiclePawnWrapper.cpp  VehiclePawnWrapper.h
Unreal/Plugins/AirSim/Source/Car/: CarPawnApi.cpp  CarPawnApi.h
Unreal/Plugins/AirSim/Source/SimHUD/: SimHUD.cpp
Unreal/Plugins/AirSim/Source/SimMode/: SimModeBase.cpp  SimModeBase.h
Unreal/Plugins/AirSim/Source/Vehicles/Car/: CarPawn.cpp  CarPawn.h  CarPawnApi.cpp  CarPawnSimApi.h  SimModeCar.cpp  TESTVehicleMovementComponent.cpp  TESTVehicleMovementComponent.h
Unreal/Plugins/AirSim/Source/Vehicles/CustomCar/: CustomCarPawn.cpp  CustomCarPawn.h  CustomCarPawnApi.cpp  CustomCarPawnApi.h  CustomCarPawnSimApi.cpp  CustomCarPawnSimApi.h  SimModeCustomCar.cpp  SimModeCustomCar.h  cFullModel_July30.c  cFullModel_Oct09.c.ranamed  (+9 more)
rosbridge/: README.md
rosbridge/airsim_bridge/: CMakeLists.txt  package.xml
rosbridge/airsim_bridge/scripts/: bridge.py
rosbridge/airsim_interface/: CMakeLists.txt  README.md  nodelets.xml  package.xml
rosbridge/airsim_interface/AirLib/include/common/: VectorMath.hpp
rosbridge/airsim_interface/config/: params.yaml
rosbridge/airsim_interface/include/airsim_interface/: airsim_interface_nodelet.hpp
rosbridge/airsim_interface/launch/: airsim_interface_node.launch
rosbridge/airsim_interface/src/: airsim_interface_node.cpp  airsim_interface_nodelet.cpp
rosbridge/tools/: AirSimClient.py  car.py  startup_car.py  startup_drone.py
rosbridge/tools/AirSimClient/: README.txt  car.py  run.bat
rosbridge/tools/LatLonTest/: LatLonTest.pde
rosbridge/tools/settings/: settings_car.json  settings_drone.json  setup.bat  setup.sh  switch_car.bat  switch_car.sh  switch_drone.bat  switch_drone.sh
(+1 files in other folders)
