<?xml version="1.0"?>
<package format="2">
    <name>airsim_interface</name>
    <version>0.0.1</version>
    <description>Airsim Interface</description>
    <author email="icolwell@gsd.uwaterloo.ca">Ian Colwell</author>
    <maintainer email="icolwell@gsd.uwaterloo.ca">Ian Colwell</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>nodelet</depend>
    <depend>anm_msgs</depend>
    <depend>cmake_modules</depend>

    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
